--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #ffd600;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -28,11 +28,28 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.rectangle {
+  display: inline-block;
+  text-align:center;
+  width: 100px;
+  height: 100px;
+  background: #d50000;
+  margin:20px;
+  position:relative;
+  transform: rotate(45deg);
+}
+
+span {
+  position: relative;
+  display: inline-block;
+  text-align:center;
+  margin:20px;
+  margin-left:0px;
+  /* margin-top:25px; */
+  transform: rotate(-45deg);
+}
+
+svg {
+  position: relative;
+  transform: rotate(180deg);
 }
