--- a/src/App.css
+++ b/src/App.css
@@ -3,14 +3,11 @@
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 5vmin;
   pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  color:white;
+  display: block;
+  margin: 0 auto;
 }
 
 .App-header {
