--- a/src/App.css
+++ b/src/App.css
@@ -50,3 +50,13 @@ svg {
   position: relative;
   transform: rotate(180deg);
 }
+
+footer {
+  /* position: relative; */
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: black;
+  color: white;
+  text-align: center;
+}
