--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,7 @@
 .App-header {
   background-color: #ffd600;
   min-height: 100vh;
+  min-width: 100vw;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -38,7 +39,7 @@
     background: #d50000;
     margin:5vw;
     position:relative;
-    box-shadow: 0 0 0 1.5px rgb(0, 0, 0);
+    box-shadow: 0 0 3px 1.5px rgb(168, 125, 4);
     transform: rotate(20deg);
   }
 
