--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  background-color: #ffd600;
+  background-color: #ffc400;
 }
 
 .App-logo {
@@ -11,7 +11,7 @@
 }
 
 .App-header {
-  background-color: #ffd600;
+  background-color: #ffc400;
   min-height: 100vh;
   min-width: 100vw;
   display: flex;
@@ -39,7 +39,7 @@
     background: #d50000;
     margin:5vw;
     position:relative;
-    box-shadow: 0 0 3px 1.5px rgb(168, 125, 4);
+    box-shadow: 4px 1px 3px 1.5px rgb(168, 125, 4);
     transform: rotate(20deg);
   }
 
@@ -56,7 +56,7 @@
     background: #d50000;
     margin:5vw;
     position:relative;
-    box-shadow: 0 0 0 1.5px rgb(0, 0, 0);
+    box-shadow: 4px 1px 3px 1.5px rgb(168, 125, 4);
     transform: rotate(20deg);
   }
 
